# PyIndexRepo

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html
.github/workflows/: docs.yaml  docs.yml  release.yaml  tests.yaml
api/: index.html
api_docs/: index.html
docs/: api.md  api_docs.md  index.md
pyindexrepo/: __init__.py  dispersion_formulas.py  main.py  pyindexrepo.py
refractiveindex/: dispersion_formulas.py  fri.py  main.py  refractiveindex.py
refractiveindex/tests/: test_formulas.py
search/: search_index.json
tests/: test_formulas.py  test_material.py
