[tool.poetry]
name = "refractiveindex"
version = "0.1.0"
description = ""
authors = ["stuermer <stuermer@lsw.uni-heidelberg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8, <3.12"
pyyaml = "^6.0"
requests = "^2.28.2"
scipy = "^1.10.1"
numba = "^0.57.1"

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules"
]


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.3"
pytest-cov = "^4.1.0"

#[tool.coverage.paths]
#source = ["refractiveindex"]
#
#[tool.coverage.run]
#branch = true
#source = ["refractiveindex"]
#
[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "tests/coverage"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
